--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "higlass-linear-labels-track",
-  "version": "0.1.4",
-  "description": "HiGlass Linear Labels Track",
+  "name": "higlass-bedlike-triangles-track",
+  "version": "0.1.0",
+  "description": "HiGlass Bedlike Triangles Track",
   "keywords": [
     "HiGlass",
     "Track"
@@ -11,15 +11,15 @@
   "contributors": [
     {
       "name": "Peter Kerpedjiev",
-      "url": "http://github.com/pkerpedjiev"
+      "url": "http://github.com/higlass"
     }
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/pkerpedjiev/higlass-linear-labels-track.git"
+    "url": "git://github.com/higlass/higlass-bedlike-triangles-track"
   },
   "main": "src/index.js",
-  "unpkg": "dist/higlass-linear-labels-track.min.js",
+  "unpkg": "dist/higlass-bedlike-triangles-track.min.js",
   "files": [
     "dist"
   ],
@@ -37,7 +37,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "file-loader": "^1.1.11",
-    "higlass": "1.3.0-rc.5",
+    "higlass": "1.5.7",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
     "node-sass": "^4.8.3",
