--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prerelease": "rm -rf dist/*; npm run build; zip -r dist.zip dist"
   },
   "dependencies": {
+    "box-intersect": "1.0.2",
     "higlass-register": "^0.1.0"
   }
 }
